<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="search"
            type="campus.tech.kakao.map.presentation.view.SearchActivity" />
        <variable
            name="searchViewModel"
            type="campus.tech.kakao.map.presentation.viewmodel.SearchViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".presentation.view.SearchActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/savedSearchWordRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchWord" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/savedSearchWordRecyclerView" />

        <EditText
            android:id="@+id/searchWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_search"
            android:text="@{searchViewModel.searchWord}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteSearchWord"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/close_24px"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/searchNothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nothing_search"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>