...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/searchButton"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:drawableRight="@drawable/search_24px"
                android:hint="@string/enter_search"
...
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/persistent_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp"
            app:behavior_hideable="false"
...
